force-app/main/default/objects/APT_Contract_Extension__c/APT_Contract_Extension__c.object-meta.xml
<CustomObject>
    <label>Contract Extension</label>
    <nameField>
        <label>Contract Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>