force-app/main/default/objects/APT_Contract_Extension__c/fields/APT_Contract_Number_in_SFDC__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Number_in_SFDC__c</fullName>
    <description>Formula to Contract Number</description>
    <formula>APT_Contract__r.Apttus__FF_Agreement_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract Number in Salesforce</inlineHelpText>
    <label>Contract Number in SFDC</label>
    <type>Text</type>
</CustomField>