force-app/main/default/objects/APT_Contract_Extension__c/fields/APT_Date_of_Expiry__c.field-meta.xml
<CustomField>
    <fullName>APT_Date_of_Expiry__c</fullName>
    <description>Formula to Contract End Date</description>
    <formula>APT_Contract__r.Apttus__Contract_End_Date__c + Extension_Approval_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract End Date</inlineHelpText>
    <label>Date of Expiry if Approved</label>
    <type>Date</type>
</CustomField>