force-app/main/default/objects/APT_Contract_Extension__c/fields/APT_Per_Annum_Value_of_Customers_Rev__c.field-meta.xml
<CustomField>
    <fullName>APT_Per_Annum_Value_of_Customers_Rev__c</fullName>
    <inlineHelpText>Per Annum Value of Customers combined eParcel &amp; BPA revenue ($)</inlineHelpText>
    <label>Per Annum Value of Customers Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>