force-app/main/default/objects/APT_Contract_Extension__c/fields/APT_Reasons_for_extension_request__c.field-meta.xml
<CustomField>
    <fullName>APT_Reasons_for_extension_request__c</fullName>
    <inlineHelpText>Why an extension has been requested?</inlineHelpText>
    <label>Reasons for extension requests</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The seller has left it too late to address the renewal</fullName>
            </value>
            <value>
                <fullName>Portfolio changes - The previous Account Manager did not renew.</fullName>
            </value>
            <value>
                <fullName>The customer needs more time to sign due to either negotiations taking longer than planned  or customer request</fullName>
            </value>
            <value>
                <fullName>Aligning different expiry dates on separate domestic and international agreements to a single date.</fullName>
            </value>
            <value>
                <fullName>Internal delays - e.g. Product &amp; Pricing; Legal; Contract Management.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>