force-app/main/default/objects/APT_Contract_Extension__c/fields/APT_Sales_Director_lookup__c.field-meta.xml
<CustomField>
    <fullName>APT_Sales_Director_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>