force-app/main/default/objects/APT_Contract_Extension__c/fields/APT_Sales_General_Manager__c.field-meta.xml
<CustomField>
    <fullName>APT_Sales_General_Manager__c</fullName>
    <formula>(APT_Contract__r.APT_Sales_General_Manager__r.FirstName)&amp;&quot; &quot;&amp;(APT_Contract__r.APT_Sales_General_Manager__r.LastName)</formula>
    <label>Sales General Manager</label>
    <type>Text</type>
</CustomField>