force-app/main/default/objects/APT_Contract_Extension__c/fields/APT_Seller_Manager__c.field-meta.xml
<CustomField>
    <fullName>APT_Seller_Manager__c</fullName>
    <formula>(APT_Contract__r.APT_Seller_Manager__r.FirstName) &amp;&apos; &apos;&amp; (APT_Contract__r.APT_Seller_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Manager</label>
    <type>Text</type>
</CustomField>