force-app/main/default/objects/APT_Contract_Extension__c/validationRules/APT_BlockCreationOfNewExtensions.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_BlockCreationOfNewExtensions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(APT_Is_Extension_Pending_Approval__c,
ISNEW())</errorConditionFormula>
    <errorMessage>There are Contract Extensions in statuses &apos;Approval Required&apos; or &apos;Pending Approval&apos;. You cannot create new contract extensions until old ones are either &apos;Approved&apos;, &apos;Rejected&apos; or &apos;Cancelled&apos;</errorMessage>
</ValidationRule>