force-app/main/default/objects/APT_Contract_Extension__c/validationRules/APT_BlockEditsBasedOfApprovalStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_BlockEditsBasedOfApprovalStatus</fullName>
    <active>true</active>
    <description>Block record from being edited</description>
    <errorConditionFormula>AND( NOT( ISPICKVAL( Approval_Status__c , &apos;Approval Required&apos;)) ,NOT( ISCHANGED(Approval_Status__c )))</errorConditionFormula>
    <errorMessage>Records which are Cancelled, Approved, Rejected or Pending Approval, cannot be edited. Please create new Contract Extension and submit it for Approval</errorMessage>
</ValidationRule>