force-app/main/default/objects/APT_Contract_Extension__c/validationRules/APT_ContractStatusMustBeInEffect.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_ContractStatusMustBeInEffect</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(APT_Contract__r.Apttus__Status_Category__c ,  &quot;In Effect&quot;))</errorConditionFormula>
    <errorMessage>You can only request contract extension for contracts that has status &quot;In Effect&quot;</errorMessage>
</ValidationRule>