force-app/main/default/objects/APT_Contract_Extension__c/validationRules/APT_OEContract.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_OEContract</fullName>
    <active>true</active>
    <description>This will block user from creating records for Open Ended Contracts not marked for Review</description>
    <errorConditionFormula>AND(
 ISPICKVAL(APT_Contract__r.Term__c, &apos;Open Ended&apos;),
NOT( APT_Contract__r.APT_Mark_for_Review__c )
)</errorConditionFormula>
    <errorMessage>Contract Extension cannot be requested for Open Ended Contracts</errorMessage>
</ValidationRule>