force-app/main/default/objects/APT_Contract_Extension__c/validationRules/APT_Probability_Max_100.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_Probability_Max_100</fullName>
    <active>true</active>
    <description>Validates Success probability maximum 100%, if it&apos;s higher than 100 ask user to correct the value</description>
    <errorConditionFormula>APT_Contract_Success_Probability__c &gt; 1</errorConditionFormula>
    <errorDisplayField>APT_Contract_Success_Probability__c</errorDisplayField>
    <errorMessage>Maximum value is 100%</errorMessage>
</ValidationRule>